# vrc_log_video_sync

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  pyrightconfig.json
scripts/: build.ps1
src/vrc_log_video_sync/: __main__.py
