[project]
name = "vrc-log-video-sync"
version = "0.1.0"
description = "VRChat Log Video Sync"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "attamari", email = "attamari614@gmail.com" }]
license = { text = "(c) 2025 attamari" }
dependencies = []

[project.scripts]
vrc-log-video-sync = "vrc_log_video_sync.__main__:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pyright>=1.1.407", "ruff>=0.14.3"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["**/migrations/**", "**/build/**", "**/dist/**"]
force-exclude = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = [
    "B",
    "UP",
    "I",
    "C4",
    "SIM",
    "N",
    "ARG",
    "PTH",
    "T20",
    "TID",
    "RUF100",
    "RUF200",
]

#unfixable = ["T201"]

extend-ignore = ["B905", "TID252", "T201"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]
"tests/**/*.py" = ["T20", "ARG001", "ARG002"]
"scripts/**/*.py" = ["T20"]
